Added MORE_PARAMS to set moobench class for Scouter